# atlas-ftag-tools

./: .darglint  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  changelog.md  example.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: docker_build.yml  docs.yml  linting.yml  pages.yml  testing.yml
docker/: Dockerfile  Dockerfile_dev
docs/: build_docs.sh  requirements.txt  sphinx_build_multiversion.py
docs/source/: conf.py  index.rst  redirect_index.html
docs/source/_static/: switcher.json
docs/source/dev_guidelines/: index.md
docs/source/examples/: index.md
ftag/: __init__.py  cli_utils.py  cuts.py  example.ipynb  example_metadata.yaml  find_metadata.py  flavour.py  flavours.py  flavours.yaml  fraction_optimization.py  git_check.py  labeller.py  labels.py  mock.py  region.py  sample.py  test_cli_utils.py  track_selector.py  transform.py  vds.py  working_points.py
ftag/hdf5/: __init__.py  h5add_col.py  h5copy.py  h5move.py  h5reader.py  h5split.py  h5utils.py  h5writer.py
ftag/src/: cuts.py  flavour.py  region.py  sample.py
ftag/src/hdf5/: h5reader.py  h5utils.py  h5writer.py
ftag/tests/: test_cli_utils.py  test_cuts.py  test_find_metadata.py  test_flavour.py  test_fraction_optimization.py  test_git_check.py  test_labeller.py  test_labels.py  test_mock.py  test_nb_example.py  test_region.py  test_sample.py  test_track_selector.py  test_transform.py  test_vds.py  test_working_points.py
ftag/tests/hdf5/: test_h5add_col.py  test_h5copy.py  test_h5move.py  test_h5reader.py  test_h5split.py  test_h5utils.py  test_h5writer.py
ftag/tests/timing/: test_h5_read.py
ftag/tests/utils/: test_logging.py  test_metrics.py
ftag/tests/wps/: test_discriminant.py  test_eff_at_cut.py  test_working_points.py
ftag/utils/: __init__.py  logging.py  metrics.py
ftag/wps/: discriminant.py  eff_at_disc_cut.py  working_points.py
main/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/.doctrees/: environment.pickle  index.doctree
main/.doctrees/autoapi/ftag/: index.doctree
main/.doctrees/autoapi/ftag/cli_utils/: index.doctree
main/.doctrees/autoapi/ftag/cuts/: index.doctree
main/.doctrees/dev_guidelines/: index.doctree
main/.doctrees/examples/: example.doctree  index.doctree
main/_sources/autoapi/ftag/: index.rst.txt
main/_sources/dev_guidelines/: index.md.txt
main/_sources/examples/: example.md.txt  index.md.txt
main/_static/: documentation_options.js
main/autoapi/: index.html
main/autoapi/ftag/: index.html
main/autoapi/ftag/cli_utils/: index.html
main/autoapi/ftag/cuts/: index.html
main/autoapi/ftag/find_metadata/: index.html
main/autoapi/ftag/flavours/: index.html
main/autoapi/ftag/fraction_optimization/: index.html
main/autoapi/ftag/git_check/: index.html
main/autoapi/ftag/hdf5/: index.html
main/autoapi/ftag/labeller/: index.html
main/autoapi/ftag/labels/: index.html
main/autoapi/ftag/mock/: index.html
main/autoapi/ftag/region/: index.html
main/autoapi/ftag/sample/: index.html
main/autoapi/ftag/track_selector/: index.html
main/autoapi/ftag/transform/: index.html
main/autoapi/ftag/utils/: index.html
main/autoapi/ftag/vds/: index.html
main/autoapi/ftag/working_points/: index.html
main/dev_guidelines/: index.html
main/examples/: example.html  index.html
v0.2.10/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.2.10/.doctrees/: environment.pickle  index.doctree
v0.2.10/.doctrees/autoapi/: index.doctree
v0.2.10/.doctrees/autoapi/ftag/: index.doctree
v0.2.10/.doctrees/examples/: example.doctree  index.doctree
v0.2.10/_sources/autoapi/: index.rst.txt
v0.2.10/_sources/autoapi/ftag/: index.rst.txt
v0.2.10/_sources/dev_guidelines/: index.rst.txt
v0.2.10/_sources/examples/: example.md.txt
v0.2.10/_static/: documentation_options.js  switcher.json
v0.2.10/autoapi/: index.html
v0.2.10/autoapi/ftag/: index.html
v0.2.10/autoapi/ftag/cli_utils/: index.html
v0.2.10/autoapi/ftag/cuts/: index.html
v0.2.10/autoapi/ftag/flavours/: index.html
v0.2.10/autoapi/ftag/fraction_optimization/: index.html
v0.2.10/autoapi/ftag/git_check/: index.html
v0.2.10/autoapi/ftag/hdf5/: index.html
v0.2.10/autoapi/ftag/labeller/: index.html
v0.2.10/autoapi/ftag/labels/: index.html
v0.2.10/autoapi/ftag/mock/: index.html
v0.2.10/autoapi/ftag/region/: index.html
v0.2.10/autoapi/ftag/sample/: index.html
v0.2.10/autoapi/ftag/track_selector/: index.html
v0.2.10/autoapi/ftag/transform/: index.html
v0.2.10/autoapi/ftag/utils/: index.html
v0.2.10/autoapi/ftag/vds/: index.html
v0.2.10/autoapi/ftag/working_points/: index.html
v0.2.10/dev_guidelines/: index.html
v0.2.10/examples/: example.html  index.html
v0.2.9/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.2.9/.doctrees/: environment.pickle  index.doctree
v0.2.9/.doctrees/autoapi/ftag/: index.doctree
v0.2.9/.doctrees/dev_guidelines/: index.doctree
v0.2.9/.doctrees/examples/: example.doctree
v0.2.9/_sources/autoapi/ftag/: index.rst.txt
v0.2.9/_sources/examples/: example.md.txt  index.rst.txt
v0.2.9/_static/: documentation_options.js
v0.2.9/autoapi/: index.html
v0.2.9/autoapi/ftag/: index.html
v0.2.9/autoapi/ftag/cli_utils/: index.html
v0.2.9/autoapi/ftag/cuts/: index.html
v0.2.9/autoapi/ftag/flavours/: index.html
v0.2.9/autoapi/ftag/git_check/: index.html
v0.2.9/autoapi/ftag/hdf5/: index.html
v0.2.9/autoapi/ftag/labeller/: index.html
v0.2.9/autoapi/ftag/labels/: index.html
v0.2.9/autoapi/ftag/mock/: index.html
v0.2.9/autoapi/ftag/region/: index.html
v0.2.9/autoapi/ftag/sample/: index.html
v0.2.9/autoapi/ftag/track_selector/: index.html
v0.2.9/autoapi/ftag/transform/: index.html
v0.2.9/autoapi/ftag/vds/: index.html
v0.2.9/autoapi/ftag/wps/: index.html
v0.2.9/dev_guidelines/: index.html
v0.2.9/examples/: example.html  index.html
(+124 files in other folders)
