[project]
name = "atlas-ftag-tools"
description = "ATLAS Flavour Tagging Tools"
authors = [{name="Sam Van Stroud"}, {name="Philipp Gadow"}]
dynamic = ["version"]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8,<3.12"

dependencies = [
  "h5py>=3.0",
  "numpy",
  "PyYAML>=5.1"
]

[project.optional-dependencies]
dev = [
  "ruff==0.1.6",
  "mypy==1.5.1",
  "pre-commit==3.1.1",
  "pytest==7.2.2",
  "pytest-cov==4.0.0",
  "pytest_notebook==0.10.0",
  "ipykernel==6.21.3",
]

[project.urls]
"Homepage" = "https://github.com/umami-hep/atlas-ftag-tools/"


[project.scripts]
vds = "ftag.vds:main"
wps = "ftag.wps.working_points:main"
h5move = "ftag.hdf5.h5move:main"
h5split = "ftag.hdf5.h5split:main"

[tool.setuptools]
packages = ["ftag", "ftag.hdf5", "ftag.wps"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ftag.__version__"}

[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
preview = "True"

[tool.ruff]
target-version = "py38"
select = ["A", "I", "E", "W", "F", "B", "UP", "PL", "ARG", "SIM", "TID", "RUF", "RET", "C4", "D2", "D3", "D4", "SIM"]
ignore = ["D211", "D213", "RUF005", "PLR2004", "PTH123", "PLW2901"]
line-length = 100

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257".

[tool.pytest]
nb_exec_timeout = 50
nb_coverage = "True"

[mypy]
ignore_missing_imports = "True"
